--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "jQuery": "^2.2.3",
     "skeleton": "^2.0.4",
     "angular": "^1.5.5",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "ngprogress": "^1.1.3"
   },
   "overrides": {
     "skeleton": {
