--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "My Website - built with Node",
   "main": "",
   "authors": [
-    "Andrew Mepham <andrew.mepham@parenta.com>"
+    "Andrew Mepham <andymeps@yahoo.com>"
   ],
   "license": "MIT",
   "moduleType": [],
@@ -18,7 +18,6 @@
     "tests"
   ],
   "dependencies": {
-    "jQuery": "^2.2.3",
     "skeleton": "^2.0.4",
     "angular": "^1.5.5",
     "angular-ui-router": "^0.2.18",
