--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "devDependencies": {
     "bower": "latest",
     "grunt": "latest",
+    "grunt-coffeelint": "0.0.15",
     "grunt-contrib-coffee": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-wiredep": "^3.0.1",
-    "morgan": "^1.7.0"
+    "grunt-scss-lint": "^0.3.8",
+    "grunt-wiredep": "^3.0.1"
   },
   "dependencies": {
     "express": "^4.13.4"
