--- a/.gitignore
+++ b/.gitignore
@@ -28,15 +28,16 @@ build/Release
 
 # Dependency directories
 node_modules
+bower_components
 jspm_packages
+typings
 
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
-public/app/libs
-.sass-cache/
-public/app/app.js
-public/css/main.css
-public/css/main.css.map
+
+# Custom
+dist
+.sass-cache
