--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "version": "0.0.1",
   "description": "My Website - built with Node",
   "devDependencies": {
-    "bower": "latest",
-    "grunt": "latest",
-    "grunt-coffeelint": "0.0.15",
-    "grunt-contrib-coffee": "^1.0.0",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-scss-lint": "^0.3.8",
-    "grunt-wiredep": "^3.0.1"
-  },
-  "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "bower": "^1.7.9",
+    "gulp": "^3.9.1",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^1.6.0"
   }
 }
