* Added .bowerrc * Removed ngProgress from bower, no longer using * Modified gulp file to include tasks for sass and bower wiredep * Reordered package.json dependencies * Changed directory of application in server.js * Removed ngProgress dependency from app.js * Updated route paths in app.routes.js * Removed $stateChangeStart event from app.run.js * Added logic for looking up skills not listed on the CV * Added test data to skills.svc.js * Moved main.scss * Moved index.html and partials

--- a/bower.json
+++ b/bower.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "skeleton": "^2.0.4",
     "angular": "^1.5.5",
-    "angular-ui-router": "^0.2.18",
-    "ngprogress": "^1.1.3"
+    "angular-ui-router": "^0.2.18"
   },
   "overrides": {
     "skeleton": {
