--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "version": "0.0.1",
   "description": "My Website - built with Node",
   "devDependencies": {
+    "angular": "^1.5.8",
     "babel": "^6.5.2",
     "babel-cli": "^6.11.4",
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "bower": "^1.7.9",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-sass": "^2.3.2",
+    "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-wiredep": "0.0.0"
+    "gulp-wiredep": "0.0.0",
+    "webpack": "^1.13.1",
+    "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "angular-ui-router": "^0.3.1"
   }
 }
