Started implementing API calls rather than static values. * Changed level of severity for no-console and no-debugger eslint rules from error to warn (they're handy, don't break my gulp watch! :'( ) * Converted synchronous method calls to promises. * Moved all data out of cv.svc.js and converted to dev api calls, need to look in to implementing .env variables.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,12 @@
         "semi": [
             "error",
             "always"
+        ],
+        "no-console": [
+            "warn"
+        ],
+        "no-debugger": [
+            "warn"
         ]
     }
 }
